css/edit_indication_form_styles.css
/* Edit indication Form */

.page-abendingar-breyta-abendingu .page-header,
.page-abendingar-breyta-abendingu #block-system-main > h2 {
    max-width: 986px;
    margin: 0 auto;
}

.page-abendingar-breyta-abendingu .page-header {
    margin-bottom: 20px;
}

.page-abendingar-breyta-abendingu #block-system-main > h2 {
    margin-bottom: 12px;
}

.node-indications-form {
    background-color: #f1f1f1;
    border: 1px solid #bfbfbf;
    padding: 26px 20px;
    max-width: 986px;
    font-family: 'Open Sans', sans-serif;
    margin: 0 auto;
    margin-bottom: 36px;
}

.node-indications-form .panel-body {
    padding: 0;
}

.node-indications-form .indication-text-readonly div {
    font-size: 16px;
    line-height: 1.65;
    padding: 21px 23px 23px;
    border: 1px solid #bfbfbf;
    background-color: #dcdcdc;
    margin-bottom: 15px;
    border-radius: 8px;
}

.node-indications-form .collapse {
    padding: 0;
}

.node-indications-form fieldset {
    border: none;
    border-radius: 0;
    background-color: transparent;
    box-shadow: unset;
    padding-bottom: 45px;
    margin-bottom: 41px;
    border-bottom: 1px solid #bfbfbf;
}

.node-indications-form legend,
.node-indications-form .vertical-tabs,
.node-indications-form .grippie {
    display: none;
}

.node-indications-form label {
    font-size: 16px;
    font-weight: 600;
    margin-bottom: 4px;
    padding-left: 6px;
}

.node-indications-form  input {
    font-size: 16px;
    padding: 11px 23px 13px;
    border: 1px solid #bfbfbf;
    border-radius: 8px !important;
    box-shadow: none;
    height: 100%;
}

.node-indications-form .input-group-addon {
    position: absolute;
    z-index: 100;
    width: 40px;
    height: 32px;
    right: 16px;
    border: none;
    background: transparent;
    top: 8px;
}

.node-indications-form .input-group {
    display: block;
}

.node-indications-form  textarea {
    font-size: 16px;
    line-height: 1.65;
    padding: 21px 23px 23px;
    border: 1px solid #bfbfbf;
    border-radius: 8px;
    box-shadow: none;
}

.node-indications-form  select {
    padding: 10px 23px 12px;
    border: 1px solid #bfbfbf;
    border-radius: 8px;
    -moz-appearance:none;
    -webkit-appearance:none;
    appearance:none;
    box-shadow: none;
    height: auto;
    font-size: 16px
}

.node-indications-form .form-type-select,
.node-indications-form .form-type-hierarchical-select {
    position: relative;
}

.node-indications-form .form-type-select:before,
.node-indications-form .form-type-hierarchical-select:before {
    content: '';
    background-image: url("images/svg/select-arrow.svg");
    width: 23px;
    height: 14px;
    position: absolute;
    right: 25px;
    top: 42px;
    pointer-events: none;
}

.node-indications-form .location-text-readonly p,
.node-indications-form .response-by-time-readonly p,
.node-indications-form .response-time-readonly p,
.node-indications-form .closing-time-readonly p {
    padding-left: 6px;
}

.node-indications-form .form-actions {
    text-align: center;
}

.node-indications-form .form-actions .btn,
.node-indications-form .btn-danger {
    width: 196px;
    border-radius: 100px;
    font-size: 18px;
}

.node-indications-form #edit-field-indication-controller-new .form-item {
    position: relative;
    overflow: hidden;
}

.node-indications-form #edit-field-mm-checkword-item {
    text-align: center;
}

.node-indications-form #edit-field-mm-checkword-item  label {
    font-size: 20px;
    color: white;
    margin-bottom: 12px;
}

.node-indications-form .group-indication-main-manager > div {
    background-color: #4881bf;
    border-radius: 8px;
    border: 1px solid #3b6a9d;
    padding: 30px 26px 36px;
}

#edit-field-mm-checkword-item .form-type-select:before {
    top: 55px;
}

.node-indications-form #edit-field-mm-checkword-item  .form-item {
    display: inline-block;
    width: 100%;
}

.node-indications-form #edit-field-mm-checkword-item select {
    border-color: white;
}

.node-indications-form .form-actions #edit-submit {
    background-color: #018e42;
    border: 1px solid #017537;
    color: white;
    margin-bottom: 20px;
    padding: 8px 0 11px;
}

.node-indications-form .form-actions #edit-preview {
    background-color: #f7d002;
    border: 1px solid #cbab02;
    color: #404040;
    margin-bottom: 20px;
    padding: 8px 0 11px;
}

.node-indications-form .form-actions #edit-delete,
.node-indications-form .btn-danger {
    background-color: #ff0000;
    border: 1px solid #d10000;
    color: white;
    margin-bottom: 20px;
    padding: 8px 0 11px;
}

.node-indications-form .btn-danger {
    margin: 0;
}

.node-indications-form .btn-danger,
.node-indications-form .form-actions #edit-delete,
.node-indications-form #edit-preview,
.node-indications-form #edit-submit {
    transition: background-color 325ms cubic-bezier(0.420, 0.000, 0.580, 1.000);
}

.node-indications-form .btn-danger:hover,
.node-indications-form .form-actions #edit-delete:hover {
    background-color: #d10000;
}

.node-indications-form #edit-preview:hover {
    background-color: #e1be02;
}

.node-indications-form #edit-submit:hover {
    background-color: #017537;
}

.node-indications-form #edit-field-sent-to-mainmanager label,
.node-indications-form #edit-field-mainmanager-id label {
    color: white;
}

.node-indications-form #edit-field-mainmanager-id input {
    border-color: white;
}

.node-indications-form #edit-field-sent-to-mainmanager input[type=checkbox] {
    width: 20px;
    height: 20px;
    top: -3px;
    margin-left: -24px;
}

.node-indications-form #edit-field-sent-to-mainmanager label {
    font-size: 16px;
    font-weight: 600;
    margin-top: 22px;
    position: relative;
}

.node-indications-form #edit-field-sent-to-mainmanager .form-item {
    border: 1px solid rgba(255,255,255,0.8);
    text-align: center;
    height: 68px;
}

.node-indications-form .field-widget-image-image {
    width: 100%;
    overflow: hidden;
    padding-top: 41px;
    border-top: 1px solid #bfbfbf;
    margin-top: 30px;
    float: left;
}

.node-indications-form .image-widget-data {
    width: 100%;
    text-align: center;
}

.node-indications-form .image-preview {
    padding: 0 0 20px 0;
}

#indications-node-form #edit-field-image-und-body .input-group-btn button,
#indications-node-form #edit-field-image .input-group-btn button {
    position: absolute;
    right: 0;
    margin: 0;
    height: 45px;
    top: 0;
    display: block;
    border-top-right-radius: 8px;
    border-bottom-right-radius: 8px;
    border-top-left-radius: 0px;
    border-bottom-left-radius: 0px;
    width: 150px;
    z-index: 3;
}

#indications-node-form .field-type-image .form-control,
#indications-node-form .field-type-text .form-control,
#indications-node-form .field-widget-options-select .form-control,
#indications-node-form .hierarchical-select .form-control {
    height: 46px;
    border-radius: 8px;
    box-shadow: unset;
    background-image: none;
}

#indications-node-form .hierarchical-select .selects {
    float: none;
}

@media screen and (min-width: 610px) {
    
    .node-indications-form #edit-field-image-und-table .image-preview,
    .node-indications-form #edit-field-image-und-table .image-widget-data {
        width: auto;
        display: inline-block;
        vertical-align: middle;
        float: none;
    }

    .node-indications-form #edit-field-image-und-table .image-preview {
        padding-bottom: 0;
        border-right: 18px solid transparent;
    }

    .node-indications-form #edit-field-image-und-table .image-widget-data {
        border-left: 18px solid transparent;
    }
}

@media screen and (min-width: 768px) {

    .node-indications-form .form-actions #edit-submit {
        margin-right: 18px;
    }

    .node-indications-form .form-actions #edit-preview {
        margin-left: 18px;
        margin-right: 18px;
    }

    .node-indications-form .form-actions #edit-delete {
       margin-left: 18px;
    }

    .node-indications-form .btn-danger {
        margin: 0;
    }
}


@media screen and (min-width: 1016px) {

    .node-indications-form {
        padding: 46px 36px;
    }

    .node-indications-form #edit-field-indication-status-ref,
    .node-indications-form #edit-field-department-ref,
    .node-indications-form #edit-field-indication-type-ref,
    .node-indications-form #edit-field-indication-controller-new,
    .node-indications-form #edit-field-indication-position-x,
    .node-indications-form #edit-field-indication-position-y,
    .node-indications-form #edit-field-indication-reporter-name,
    .node-indications-form #edit-field-indication-reporter-ssn,
    .node-indications-form #edit-field-indication-reporter-email,
    .node-indications-form #edit-field-indication-reporter-phone,
    .node-indications-form #edit-field-mainmanager-id,
    .node-indications-form #edit-field-sent-to-mainmanager {
        float: left;
        width: 50%;
    }

    .node-indications-form #edit-field-indication-status-ref,
    .node-indications-form #edit-field-indication-type-ref,
    .node-indications-form #edit-field-indication-position-x,
    .node-indications-form #edit-field-indication-reporter-name,
    .node-indications-form #edit-field-indication-reporter-email,
    .node-indications-form #edit-field-sent-to-mainmanager {
        border-right: 18px solid transparent;
    }

    .node-indications-form #edit-field-department-ref,
    .node-indications-form #edit-field-indication-controller-new,
    .node-indications-form #edit-field-indication-position-y,
    .node-indications-form #edit-field-indication-reporter-ssn,
    .node-indications-form #edit-field-indication-reporter-phone,
    .node-indications-form #edit-field-mainmanager-id {
        border-left: 18px solid transparent;
    }

    .node-indications-form #edit-field-sent-to-mainmanager {
        padding-top: 4px;
    }
}

